<resources>
    <string name="app_name">Weather Wardrobe</string>
    <string name="title_home">Home</string>
    <string name="title_coordinates">Enter Coordinates</string>
    <string name="title_settings">Settings</string>
    <string name="more_info_1">Current Coordinates</string>
    <string name="switch_headers">Optional Clothing Items</string>
    <string name="switch1">Scarf Recommended</string>
    <string name="switch2">Mittens Recommended</string>
    <string name="temperature_header">Temperature Ranges</string>
    <string name="temperature_note">Temp(s) under min of Lvl2 will suggest Lvl1(extreme), and Lvl4(light) suggested for temp(s) above max of Lvl3</string>
    <string name="humidity_header">Umbrella Humidity% Settings</string>
    <string name="temp_unit_header">Temperature Unit</string>
    <string name="farenheight">Farenheight</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="temp_lvl_2_min">Level 2(Heavy) Min Temp</string>
    <string name="temp_lvl_2_max">Level 2(Heavy) Max Temp</string>
    <string name="temp_lvl_3_max">Level 3(Medium) Max Temp</string>
    <string name="humidity_umbrella_max">Max</string>
    <string name="humidity_umbrella_min">Min</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="cancel_changes_button">Cancel</string>
    <string name="coordinates_long_hint">Longitude</string>
    <string name="coordinates_lati_hint">Latitude</string>
    <string name="submit_coordinates_button">Submit Coordinates</string>
    <string name="humidity_note">Raincoat suggested for humidities > umbrella max</string>
    <string name="temp_option_key">KZgozUK</string>
    <string name="temp_lvl2min_key">52fz9PT</string>
    <string name="temp_lvl2max_key">awnQQlp</string>
    <string name="temp_lvl3max_key">tLYos1B</string>
    <string name="humidity_umbrella_min_key">8NO$)Vv</string>
    <string name="humidity_umbrella_max_key">SU4NeKk</string>
    <string name="wind_speed_option_key">A8^23Jk</string>
    <string name="scarf_enabled_key">arbjo53</string>
    <string name="mittens_enabled_key">ryL9a7q</string>
    <string name="coordinates_rec_level_hint">Recommended Level:</string>
    <string name="coordinates_rec_level_description_hint">Level Description:</string>
    <string name="coordinates_temp_hint">Temperature</string>
    <string name="coordinates_humidity_hint">Humidity%</string>
    <string name="coordinates_windspeed_hint">Wind Speed</string>
    <string name="coordinates_clothing_items_hint">Recommended Clothing Items:</string>
    <string name="level_1_header">Level 1(Extreme)</string>
    <string name="level_2_header">Level 2(Heavy)</string>
    <string name="level_3_header">Level 3(Medium)</string>
    <string name="level_4_header">Level 4(Light)</string>
    <string name="level_4_description">Tshirt and shorts</string>
    <string name="level_3_description">long-sleeve shirt and jeans</string>
    <string name="level_2_description">long-sleeve shirt, jeans, and a jacket</string>
    <string name="level_1_description">long sleeve shirt, jeans, undershirt, and a winter coat with a hood</string>
    <string name="current_coordinates_button">Use Current Location</string>
    <string name="mph">MPH</string>
    <string name="kph">KM/H</string>
    <string name="wind_speed_unit_header">Wind Speed Unit</string>
</resources>