<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/settings_parent"
    tools:context=".ui.settings.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/temp_unit_header"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/radio_f"
                android:id="@+id/temp_option_group">
                <RadioButton android:id="@+id/radio_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farenheight" />
                <RadioButton android:id="@+id/radio_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius" />
                <RadioButton android:id="@+id/radio_k"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/temperature_header"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature_note"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_lvl_2_min_layout"
                    app:endIconMode="clear_text"
                    android:layout_weight="1"
                    android:hint="@string/temp_lvl_2_min">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/temp_lvl_2_min_input"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_lvl_2_max_layout"
                    app:endIconMode="clear_text"
                    android:layout_weight="1"
                    android:hint="@string/temp_lvl_2_max">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/temp_lvl_2_max_input"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_lvl_3_max_layout"
                    app:endIconMode="clear_text"
                    android:hint="@string/temp_lvl_3_max">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/temp_lvl_3_max_input"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/temp_lvl_4_max_layout"
                    app:endIconMode="clear_text"
                    android:hint="@string/temp_lvl_4_max">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/temp_lvl_4_max_input"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/humidity_header"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humidity_umbrella_layout"
                app:endIconMode="clear_text"
                android:hint="@string/humidity_umbrella_max">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/humidity_umbrella_max_input"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_note"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/switch_headers"/>

            <androidx.appcompat.widget.SwitchCompat
                android:text="@string/switch1"
                android:id="@+id/scarf_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.SwitchCompat
                android:text="@string/switch2"
                android:layout_width="wrap_content"
                android:id="@+id/mittens_toggle"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/save_changes_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save_changes_button"/>
            </LinearLayout>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>